# rwkv-gepa-rust

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml  mode.example.toml  watchs.json  watchs.md
.github/workflows/: ci.yml
docs/: github-remote-init.md  pipeline_v2_plan.md
fixtures/: mmlu_variants.sample.jsonl  source_questions.sample.jsonl
prompts/: multiple_choice.toml  open_qa.toml
scripts/: export_done_train.sh  export_ref_answer_dataset.sh  export_rwkv_train.py
src/: answer.rs  cli.rs  config.rs  dataset.rs  export.rs  generation.rs  input.rs  jsonl.rs  main.rs  openai.rs  output.rs  pipeline.rs  prompt.rs  test_support.rs  text.rs  types.rs  util.rs
