[package]
name = "rwkv-gepa-rust-v1"
version = "0.1.0"
edition = "2024"
description = "Standalone Rust rewrite of the V1 RWKV GEPA synthesis pipeline"
license = "MIT"
readme = "README.md"

[dependencies]
anyhow = "1.0"
arrow-array = "55.2.0"
arrow-schema = "55.2.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
dashmap = "6.1"
futures = "0.3"
indicatif = "0.17"
parquet = { version = "55.2.0", default-features = false, features = ["arrow", "snap"] }
reqwest = { version = "0.12", default-features = false, features = ["charset", "http2", "json", "native-tls"] }
rustc-hash = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44", features = ["fs", "io-util", "macros", "rt-multi-thread", "sync", "time", "net"] }
toml = "0.8"

[profile.release]
codegen-units = 1
lto = "thin"
strip = "debuginfo"
